T3Admin: Fix overlap control http://pm.joomlart.com/browse/T3-20

--- a/source/plg_system_t3/admin/css/admin.css
+++ b/source/plg_system_t3/admin/css/admin.css
@@ -14,7 +14,7 @@
 
 /* -------------------------------------------------*/
 /* T3 ADMIN STYLE
----------------------------------------------------*/
+----------------------------------------------------*/
 
 @import "../fonts/font-awesome/css/font-awesome.css";
 
@@ -588,6 +588,7 @@ button.btn-primary:active {
   right: 0;
   padding: 20px !important;
   margin: 0 !important;
+  z-index: 10;
 }
 
 /* USERS INTERACTION ELEMENTS
